--- a/docker/nginx-conf/nginx.conf
+++ b/docker/nginx-conf/nginx.conf
@@ -1,9 +1,15 @@
 server {
     listen 80 default_server;
     listen [::]:80 default_server;
+    #listen 443 ssl;
+    #listen [::]:443 ssl;
+    #ssl_certificate /etc/nginx/conf.d/ssl/ownsafe.crt;
+    #ssl_certificate_key /etc/nginx/conf.d/ssl/ownsafe.key;
+    #include /etc/nginx/conf.d/ssl/ssl-params.conf;
     
     server_name localhost;
-
+    access_log  /var/log/nginx/ownsafe-access.log;
+    error_log  /var/log/nginx/ownsafe-error.log;
     root /var/www/html;
     index index.php index.html;
 
@@ -23,8 +29,7 @@ server {
     }
 
     # Prevent additional headers like TRACE, DELETE, PUSH
-    if ($request_method !~ ^(GET|HEAD|POST)$ )
-        {
+    if ($request_method !~ ^(GET|HEAD|POST)$ ) {
             return 405;
-        }
+    }
 }
